# runnel

./: CHANGELOG.md  Cargo.toml  Makefile  README.md  README.tpl  build.rs
.cargo/: config.toml
benches/: bench-pipeio.rs
specs/: 0.requirements.md  1.acceptance-criteria.md  2.design.md  3.tasks.md
src/: lib.rs
src/medium/: lineio.rs  linepipeio.rs  mod.rs  pipeio.rs  stdio.rs  stdioe.rs  stringio.rs
tests/: test.rs  test_lineio.rs  test_linepipeio.rs  test_pipeio.rs  test_size_of.rs  test_stdio.rs  test_stdioe.rs  test_stringio.rs
xbench/: Cargo.toml
xbench/benches/: bench-linepipeio.rs  bench-pipeio.rs
