[package]
name = "runnel"
version = "0.3.11"
authors = ["aki <aki.akaguma@hotmail.com>"]
description = "the pluggable io stream. now support: stdio, string io, in memory pipe"
keywords = ["pipe", "fifo", "filter", "threads"]
categories = ["concurrency", "development-tools::testing", "text-processing"]
license = "MIT OR Apache-2.0"
readme = "README.md"
build = "build.rs"
edition = "2021"
repository = "https://github.com/aki-akaguma/runnel"

[features]
default = []
dox = []

[package.metadata.docs.rs]
features = ["dox"]

[dependencies]

[build-dependencies]
rustc_version = "0.4"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "bench-pipeio"
harness = false
