[package]
name = "runnel"
version = "0.4.0"
authors = ["aki <aki.akaguma@hotmail.com>"]
description = "the pluggable io stream. now support: stdio, string io, in memory pipe"
keywords = ["pipe", "fifo", "filter", "threads"]
categories = ["concurrency", "development-tools::testing", "text-processing"]
license = "MIT OR Apache-2.0"
readme = "README.md"
edition = "2021"
rust-version = "1.60.0"
repository = "https://github.com/aki-akaguma/runnel"

[features]
default = []
dox = []

[package.metadata.docs.rs]
features = ["dox"]

[dependencies]

[build-dependencies]

[dev-dependencies]
rustversion = "1.0"

[workspace]
members = [
    "xbench",
]

#[profile.release]
#lto = true
